fix_flex_wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -419,8 +419,6 @@ a {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
 	-webkit-box-pack: justify;
 	-ms-flex-pack: justify;
 	justify-content: space-between;
